--- a/app/views/pageflow/before_after/page.html.erb
+++ b/app/views/pageflow/before_after/page.html.erb
@@ -1,6 +1,10 @@
 <div class="blackLayer"></div>
 <div class="content_and_background beforeAfterPage">
-  <div class="close_button text_hidden_only" tabindex="4" title="<%= t('.close_title') %>"><%= t('.close') %></div>
+  <div class="close_button text_hidden_only" tabindex="4" title="<%= t('.close_title') %>">
+    <div class="label">
+      <%= t('.close') %>
+    </div>
+  </div>
 
   <div class="backgroundArea">
     <div class="videoWrapper">
