Make Control Bar Text Configurable
Allow to display a more content specific text next to the play button
that opens the before/after view.

--- a/app/views/pageflow/before_after/page.html.erb
+++ b/app/views/pageflow/before_after/page.html.erb
@@ -31,7 +31,7 @@
           <a class="vjs-play-control vjs-play vjs-control" tabindex="4" title="<%= t('.start_title') %>"><span></span></a>
         </div>
         <div class="control_bar_text">
-          <%= t('.start') %>
+          <%= configuration['control_bar_text'].presence || t('.start') %>
         </div>
       </div>
     </div>
