--- a/app/views/pageflow/before_after/page.html.erb
+++ b/app/views/pageflow/before_after/page.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="content">
-    <div class="controls">
+    <div class="controls" data-role="player_controls">
       <span class="hint"><%= t('pageflow.public.before_after.hint') %></span>
       <%= info_box(configuration) %>
       <div class="vjs-control-bar view-control">
